#92 API - swagger doc for report base model
